<resources>
    <string name="app_name">Synchedule</string>
    <string name="menu_item_schedule">Schedule</string>
    <string name="menu_item_calendar">Calendar</string>
    <string name="menu_item_deadline">Deadline</string>
    <string name="menu_item_settings">Settings</string>
    <string name="today_done">Done</string>
    <string name="today_now">Now</string>
    <string name="today_not_yet">Not Yet</string>
    <string name="bottomsheet_title">Today</string>
    <string name="schedule_start_time">08:00</string>
    <string name="schedule_end_time">16:00</string>
    <string name="schedule_name">Schedule Name</string>
    <string name="schedule_lecturer">Lecture</string>
    <string name="profile_name">Your Name.</string>
    <string name="main_date">28</string>
    <string name="main_month_year">July 2021</string>
    <string name="main_day">Wednesday</string>
    <string name="settings_title">Settings</string>
    <string name="settings_first_name_label">First Name</string>
    <string name="settings_last_name_label">Last Name</string>
    <string name="settings_save">Save</string>
    <string name="schedule_lessons_title">Lessons</string>
    <string name="schedule_main_title">Schedule</string>
    <string name="schedule_lesson_fab">Add Lesson</string>
    <string name="schedule_lesson_count">5 Lessons</string>
    <string name="schedule_lesson_manage_subject">Subject</string>
    <string name="schedule_lesson_manage_lecturer">Lecturer</string>
    <string name="schedule_lesson_manage_theme">Theme</string>
    <string name="schedule_detail_today_label">Today</string>
    <string name="shared_pref_profile">SHARED_PROFILE</string>
    <string name="shared_pref_profile_first_name">FIRST_NAME</string>
    <string name="shared_pref_profile_last_name">LAST_NAME</string>
    <string name="shared_pref_profile_pic">PROFILE_PIC</string>
</resources>