<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="15dp"
    android:layout_marginHorizontal="10dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/scheduleView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/chocolate"
            android:orientation="vertical"
            android:paddingVertical="8dp"
            android:gravity="center">

            <TextView
                android:id="@+id/scheduleStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_start_time"
                android:textSize="20sp"
                android:fontFamily="@font/nunito_sans_extrabold"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/scheduleEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_end_time"
                android:textSize="20sp"
                android:fontFamily="@font/nunito_sans_extrabold"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/scheduleName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_name"
                android:textStyle="bold"
                android:fontFamily="@font/nunito_sans_extrabold"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/scheduleLecturer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_lecturer"
                android:textSize="15sp"
                android:textColor="#696969"/>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>