<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.AppBarLayout.PrimarySurface"
            app:elevation="0dp"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_baseline_menu_24"
                style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
                android:background="@color/white"
                android:elevation="0dp" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!--profile pic and name-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:id="@+id/mainProfilePic"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_user_pic"
                        app:civ_border="true"
                        />

                    <TextView
                        android:id="@+id/mainNameText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_name"
                        android:textStyle="bold"
                        android:textSize="24sp"/>

                </LinearLayout>

                <!--Current date day-->
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="20dp"
                    app:cardElevation="10dp"
                    app:cardCornerRadius="15dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="5dp"
                        android:gravity="center">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_gravity="start"
                            android:gravity="center">

                            <TextView
                                android:id="@+id/mainDateText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/main_date"
                                android:textSize="30sp"/>

                            <TextView
                                android:id="@+id/mainMonthYearText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/main_month_year"
                                android:textSize="20sp"/>

                        </LinearLayout>

                        <ImageView
                            android:layout_width="10dp"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_divider"
                            android:layout_marginHorizontal="10dp"/>

                        <TextView
                            android:id="@+id/mainDayText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/main_day"
                            android:textSize="28sp"/>

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <!-- Main Menu -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="50dp"
                    android:gravity="center">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/mainScheduleMenu"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:cardElevation="10dp"
                        app:contentPadding="10dp"
                        app:cardCornerRadius="10dp"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginVertical="10dp"
                        app:cardBackgroundColor="@color/grey_blue">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/ic_schedule"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/menu_item_schedule"
                                android:textStyle="bold"/>

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/mainCalendarMenu"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginVertical="5dp"
                        app:cardElevation="10dp"
                        app:contentPadding="10dp"
                        app:cardCornerRadius="10dp"
                        app:cardBackgroundColor="#DDFADD">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/ic_calendar_filled"
                                app:tint="@color/green" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/menu_item_calendar"
                                android:textStyle="bold"/>

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/mainDeadlineMenu"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginVertical="5dp"
                        app:cardElevation="10dp"
                        app:contentPadding="10dp"
                        app:cardCornerRadius="10dp"
                        app:cardBackgroundColor="#FDE4D5">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/ic_deadline"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/menu_item_deadline"
                                android:textStyle="bold"/>

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/mainNavigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_drawer"
        app:headerLayout="@layout/header_navigation_drawer"/>

</androidx.drawerlayout.widget.DrawerLayout>