<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.settings.SettingsActivity">

    <include layout="@layout/secondary_app_bar"
        android:id="@+id/appBarLayout"/>

    <!-- Note: A RecyclerView can also be used -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Profile Picture -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="10dp"
                android:gravity="center">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/settingsProfilePic"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/ic_user_pic" />

                <Button
                    android:id="@+id/settingsProfilePicBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Profile Picture"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:paddingHorizontal="10dp"
                    android:backgroundTint="@color/dark_blue"
                    app:shapeAppearance="?attr/shapeAppearanceLargeComponent"/>

            </LinearLayout>

            <!-- Textfield -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="10dp"
                android:paddingHorizontal="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_first_name_label"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/settingFirstNameTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="#8A99FB"
                    app:errorEnabled="true"
                    app:errorTextColor="@color/red"
                    app:boxStrokeErrorColor="@color/red"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textSize="18sp"
                        android:inputType="textPersonName"
                        />

                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_last_name_label"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginTop="10dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/settingLastNameTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="#8A99FB"
                    app:errorEnabled="true"
                    app:errorTextColor="@color/red"
                    app:boxStrokeErrorColor="@color/red"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textSize="18sp"
                        android:inputType="textPersonName"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/settingsSaveButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_save"
                android:textStyle="bold"
                android:textSize="18sp"
                android:fontFamily="@font/nunito_sans_extrabold"
                android:paddingVertical="10dp"
                android:backgroundTint="#8A99FB"
                android:layout_marginVertical="10dp"
                android:layout_gravity="center"
                app:shapeAppearance="?attr/shapeAppearanceLargeComponent"/>

        </LinearLayout>



    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>